feat: add header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,3 +1,46 @@
 <header class="header">
-    
+    <div class="container">
+        <div class="header__inner">
+            <nav class="nav header__left">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">О нас</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Дома</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Цены</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Инфраструктура</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Ресторан</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <a href="index.html" class="logo header__logo">
+                <picture>
+                    <source srcset="img/logo/logo-header.webp">
+                    <img src="img/logo/logo-header.png" class="logo" alt="Логотип">
+                </picture>
+            </a>
+
+            <div class="header__right">
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Мероприятия</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button type="button" class="btn btn--orange header__btn">Забронировать</button>
+            </div>
+        </div>
+    </div>
 </header>
