--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,4 +1,8 @@
 // colors
+$colors-orange: #e37a3e;
+$colors-primary: #fff;
+$colors-secondary: #000;
+$colors-title: #202020;
 
 // typography
 $family: 'Jost', sans-serif;
