--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,2 +1,37 @@
 .header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+
+    height: 57px;
+
+    background-color: rgba(#1d1d1d, 0.2);
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__logo {
+        position: absolute;
+        top: 17px;
+        left: 50%;
+        z-index: 1;
+
+        transform: translate(-50%);
+    }
+
+    &__right {
+        display: flex;
+        align-items: center;
+    }
+
+    &__btn {
+        margin-left: 114px;
+
+        width: 185px;
+        height: 57px;
+    }
 }
