--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,8 +15,34 @@
 
 body {
     font-family: $family;
+    font-weight: 500;
+    color: $colors-primary;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 // components
 @import 'components/header.scss';
 @import 'components/footer.scss';
+@import 'components/container.scss';
+@import 'components/nav.scss';
+@import 'components/btn.scss';
