--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -13,7 +13,7 @@
                         <a href="#" class="nav__link">Цены</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">Инфраструктура</a>
+                        <a href="#" class="nav__link">Досуг</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Ресторан</a>
