feat: add section placement

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,3 +57,5 @@ img {
 @import 'components/showcase.scss';
 @import 'components/form.scss';
 @import 'components/section.scss';
+@import 'components/swiper.scss';
+@import 'components/card.scss';
