--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -1,8 +1,6 @@
 .section {
     &--about {
         .section__inner {
-            margin-top: 101px;
-
             display: flex;
             gap: 60px;
         }
@@ -20,6 +18,22 @@
             max-width: 630px;
             margin-bottom: 36px;
         }
+    }
+
+    &--placement {
+        .section__text {
+            max-width: 669px;
+            margin-bottom: 40px;
+        }
+
+        .section__btn {
+            margin: 0 auto;
+            margin-top: 48px;
+        }
+    }
+
+    &__inner {
+        margin-top: 212px;
     }
 
     &__header {
