--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -8,6 +8,78 @@
         max-height: 491px;
     }
 
+    &--st {
+        position: relative;
+
+        &:nth-of-type(1) {
+            grid-row: 1/3;
+
+            .card__text-block {
+                background-color: rgba(#e37a3e, 0.8);
+            }
+        }
+        &:nth-of-type(2) {
+            max-width: 646px;
+            max-height: 267px;
+            grid-column: 2/4;
+        }
+
+        &:nth-child(3) {
+            height: 467px;
+        }
+        &:nth-child(4) {
+        }
+        &:nth-child(5) {
+        }
+        &:nth-child(6) {
+            margin-top: auto;
+        }
+
+        .card__text-block {
+            position: absolute;
+            bottom: 0;
+
+            padding: 27px 20px;
+
+            width: 100%;
+
+            background-color: rgba(#171717, 0.4);
+        }
+
+        .card__title {
+            position: relative;
+            margin-bottom: 0;
+
+            color: $colors-primary;
+            font-size: 24px;
+            line-height: 1.04;
+
+            text-transform: none;
+
+            text-decoration: underline;
+
+            // &::after {
+            //     content: '';
+            //     position: absolute;
+            //     bottom: 0;
+            //     left: 0;
+
+            //     width: 100%;
+            //     height: 1px;
+
+            //     background-color: $colors-primary;
+            // }
+        }
+
+        .card__text {
+            margin-top: 17px;
+            font-size: 16px;
+            font-weight: 300;
+
+            color: $colors-primary;
+        }
+    }
+
     &__text-block {
         width: 50%;
         padding: 0px 55px 63px;
