feat: add section faq

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -108,6 +108,16 @@
         }
     }
 
+    &--faq {
+        .section__inner {
+            margin-bottom: 67px;
+        }
+
+        .section__header {
+            margin-bottom: 42px;
+        }
+    }
+
     &__inner {
         margin-top: 212px;
     }
