--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,3 +59,4 @@ img {
 @import 'components/section.scss';
 @import 'components/swiper.scss';
 @import 'components/card.scss';
+@import 'components/faq.scss';
