--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,3 +60,4 @@ img {
 @import 'components/swiper.scss';
 @import 'components/card.scss';
 @import 'components/faq.scss';
+@import 'components/socials.scss';
