fix: swipers, container, cards

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -18,6 +18,10 @@
             max-width: 630px;
             margin-bottom: 36px;
         }
+
+        .section__image {
+            height: 100%;
+        }
     }
 
     &--placement {
