--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -13,10 +13,6 @@
 
         &:nth-of-type(1) {
             grid-row: 1/3;
-
-            .card__text-block {
-                background-color: rgba(#e37a3e, 0.8);
-            }
         }
         &:nth-of-type(2) {
             max-width: 646px;
@@ -44,10 +40,16 @@
             width: 100%;
 
             background-color: rgba(#171717, 0.4);
+
+            transition: 0.3s linear;
+
+            &:hover {
+                background-color: rgba(#e37a3e, 0.8);
+            }
         }
 
         .card__title {
-            position: relative;
+            display: block;
             margin-bottom: 0;
 
             color: $colors-primary;
@@ -58,17 +60,11 @@
 
             text-decoration: underline;
 
-            // &::after {
-            //     content: '';
-            //     position: absolute;
-            //     bottom: 0;
-            //     left: 0;
-
-            //     width: 100%;
-            //     height: 1px;
-
-            //     background-color: $colors-primary;
-            // }
+            &::after {
+                content: '';
+                position: absolute;
+                inset: 0;
+            }
         }
 
         .card__text {
