fix: bg, header nav

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    background: #ebeff4, url('../img/footer/bg.jpg');
+    background: url('../img/footer/bg.png');
+    background-color: #ebeff4;
 
     background-repeat: no-repeat;
     background-size: cover;
