--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -170,6 +170,7 @@
         color: rgba($colors-title, 0.05);
     }
     &__title {
+        position: relative;
         font-size: 55px;
         color: $colors-title;
         text-transform: uppercase;
