--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -76,6 +76,17 @@
         }
     }
 
+    &__btn {
+        font-size: 18px;
+        font-weight: 400;
+        position: relative;
+        bottom: 20px;
+        width: 130px;
+        height: 40px;
+
+        margin-left: auto;
+    }
+
     &__text-block {
         width: 50%;
         padding: 0px 55px 63px;
