--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -41,9 +41,8 @@
     }
 
     &--st {
-        .section__inner {
-            margin-top: 134px;
-            margin-bottom: 63px;
+        .section__title {
+            padding-bottom: 46px;
         }
         .section__header-title-bg {
             font-size: 150px;
@@ -61,7 +60,6 @@
     }
 
     &--restaurant {
-        margin-bottom: 70px;
         .section__header {
             margin-bottom: 40px;
         }
@@ -71,14 +69,16 @@
         .section__inner {
             max-width: 1659px;
             margin-left: auto;
-
-            margin-bottom: 31px;
         }
 
         .section__header {
             .section__text {
                 max-width: 699px;
             }
+        }
+
+        .section__title {
+            margin-bottom: 20px;
         }
 
         .section__content {
@@ -118,6 +118,7 @@
         background-size: cover;
 
         .section__inner {
+            padding-top: 258px;
             padding-bottom: 67px;
         }
 
@@ -131,8 +132,6 @@
     }
 
     &--map {
-        padding-bottom: 100px;
-
         background: url('../img/section/map/bg.png');
 
         background-position-y: -200px;
@@ -149,7 +148,8 @@
     }
 
     &__inner {
-        padding-top: 212px;
+        padding-top: 101px;
+        padding-bottom: 60px;
     }
 
     &__header {
