--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -145,6 +145,10 @@
         .section__header-title-bg {
             color: rgba($colors-primary, 0.2);
         }
+
+        .section__content {
+            position: relative;
+        }
     }
 
     &__inner {
