--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -61,3 +61,4 @@ img {
 @import 'components/card.scss';
 @import 'components/faq.scss';
 @import 'components/socials.scss';
+@import 'components/map.scss';
