--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -40,6 +40,20 @@
         }
     }
 
+    // about page
+    &--placement-about {
+        .section__inner {
+            margin-top: 67px;
+        }
+
+        .section__content {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-rows: auto;
+            gap: 50px 29px;
+        }
+    }
+
     &--st {
         .section__title {
             padding-bottom: 46px;
@@ -56,6 +70,21 @@
             grid-template-columns: 352px 307px 317px 357px;
             grid-template-rows: 267px 422px;
             gap: 22px;
+        }
+    }
+
+    &--about-st {
+        .section__header-title-bg {
+            font-size: 150px;
+            line-height: 0.89;
+        }
+
+        .section__title {
+            padding-bottom: 46px;
+        }
+
+        .section__content {
+            position: relative;
         }
     }
 
