--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -54,6 +54,25 @@
         }
     }
 
+    // house details
+    &--house-details {
+        .section__inner {
+            padding: 145px 0 65px;
+        }
+
+        .section__header {
+            margin-bottom: 60px;
+        }
+
+        .section__text {
+            margin-top: 62px;
+
+            font-size: 24px;
+            font-weight: 300;
+            line-height: 1.26;
+        }
+    }
+
     &--st {
         .section__title {
             padding-bottom: 46px;
