--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -85,9 +85,10 @@
         .form__input {
             width: 100%;
 
-            padding: 13px 26px;
+            padding: 14px 26px;
+            letter-spacing: 0;
 
-            font-size: 22px;
+            // font-size: 22px;
 
             background: none;
             border-bottom: 1px solid $colors-orange;
