--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -221,12 +221,21 @@
         .section__content {
             position: relative;
             max-height: 495px;
+            max-width: 1400px !important;
+        }
+
+        .section__title {
+            position: relative;
+            bottom: -17px !important;
+            left: -6px !important;
         }
     }
 
     &--contacts {
         .section__inner {
-            padding: 110px 92px;
+            max-width: 1320px;
+            padding: 110px 0 92px;
+            margin: 0 auto;
 
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -248,6 +257,11 @@
 
         .section__header-title-bg {
             color: rgba($colors-primary, 0.2);
+        }
+
+        .section__title {
+            position: relative;
+            bottom: -30px;
         }
 
         .section__header {
@@ -274,8 +288,12 @@
     &__header-title-bg {
         display: block;
         position: absolute;
-        left: 75px;
-        top: -120px;
+        // left: 75px;
+        // top: -120px;
+
+        left: 52px;
+        top: -109px;
+
         z-index: 0;
 
         font-size: 177px;
