--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,3 +62,4 @@ img {
 @import 'components/faq.scss';
 @import 'components/socials.scss';
 @import 'components/map.scss';
+@import 'components/burger.scss';
