--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -14,12 +14,30 @@
         justify-content: space-between;
 
         color: $colors-title;
+
+        @media (max-width: $lg) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 30px;
+        }
+
+        @media (max-width: $md) {
+            gap: 30px;
+        }
     }
 
     &__left,
     &__right {
         display: flex;
         align-items: flex-end;
+
+        @media (max-width: $md) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 30px;
+
+            justify-content: flex-end;
+        }
     }
 
     &__logo {
@@ -48,6 +66,11 @@
 
         border: 0;
         cursor: pointer;
+
+        @media (max-width: $md) {
+            margin-left: 0;
+        }
+
         img {
             transform: rotate(90deg);
             margin-bottom: 9px;
