--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -240,6 +240,15 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 27px;
+
+            @media (max-width: $lg) {
+                grid-template-columns: minmax(0, 500px);
+                place-content: center;
+            }
+
+            @media (max-width: $sm) {
+                padding: 30px 0;
+            }
         }
     }
 
@@ -254,6 +263,12 @@
         padding-top: 80px;
 
         margin-bottom: 250px;
+
+        @media (max-width: $sm) {
+            padding-top: 0;
+
+            min-height: 1200px;
+        }
 
         .section__header-title-bg {
             color: rgba($colors-primary, 0.2);
@@ -278,6 +293,14 @@
     &__inner {
         padding-top: 101px;
         padding-bottom: 60px;
+
+        @media (max-width: $xl) {
+            padding-top: 50px;
+        }
+
+        @media (max-width: $sm) {
+            padding: 30px 0;
+        }
     }
 
     &__header {
@@ -300,6 +323,27 @@
         text-transform: uppercase;
 
         color: rgba($colors-title, 0.05);
+
+        @media (max-width: $xl) {
+            font-size: 150px;
+            top: -60px;
+        }
+
+        @media (max-width: $lg) {
+            font-size: 120px;
+            top: -40px;
+            line-height: 0.8;
+        }
+
+        @media (max-width: $md) {
+            font-size: 90px;
+            top: 0;
+            line-height: 0.8;
+        }
+
+        @media (max-width: $sm) {
+            display: none;
+        }
     }
     &__title {
         position: relative;
@@ -307,6 +351,14 @@
         color: $colors-title;
         text-transform: uppercase;
         font-weight: 500;
+
+        @media (max-width: $lg) {
+            font-size: 45px;
+        }
+
+        @media (max-width: $sm) {
+            font-size: 30px;
+        }
 
         b {
             font-weight: 700;
