--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -6,6 +6,65 @@
         display: flex;
 
         max-height: 491px;
+
+        @media (max-width: $lg) {
+            flex-direction: column;
+            align-items: center;
+            max-height: fit-content;
+            gap: 10px;
+
+            width: 100%;
+
+            .swiper {
+                min-height: fit-content;
+            }
+
+            .card__text-block {
+                padding: 0 15px;
+                width: 70%;
+            }
+
+            .card__btn {
+                min-width: 30%;
+            }
+
+            &:nth-of-type(2) {
+                .swiper {
+                    order: 2;
+                }
+
+                .card__text-block {
+                    order: 1;
+                }
+            }
+        }
+
+        @media (max-width: $md) {
+            .card__text-block {
+                width: 100%;
+            }
+
+            .swiper {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: $sm) {
+            .card__text-block {
+                padding: 15px;
+            }
+            .card__btn {
+                width: 50%;
+                margin-top: 20px;
+                position: static;
+            }
+
+            .card__row-value {
+                b {
+                    font-size: 20px;
+                }
+            }
+        }
     }
 
     &--house-about {
@@ -96,6 +155,48 @@
         }
         &:nth-child(6) {
             margin-top: auto;
+        }
+
+        @media (max-width: $xl) {
+            img {
+                width: 100%;
+                height: 100%;
+            }
+            &:nth-of-type(1) {
+                grid-row: 1/3;
+                grid-column: 1;
+            }
+            &:nth-of-type(2) {
+                max-width: 100%;
+                max-height: 267px;
+                grid-row: 3;
+                grid-column: 1/3;
+            }
+
+            &:nth-child(3) {
+                height: 467px;
+
+                grid-row: 1;
+                grid-column: 2;
+            }
+            &:nth-child(4) {
+            }
+            &:nth-child(5) {
+            }
+            &:nth-child(6) {
+                margin-top: auto;
+
+                grid-row: 2;
+                grid-column: 2;
+            }
+        }
+
+        @media (max-width: $md) {
+            grid-row: auto !important;
+            grid-column: auto !important;
+
+            max-width: fit-content;
+            max-height: fit-content;
         }
 
         .card__text-block {
@@ -203,11 +304,12 @@
     }
 
     &__btn {
+        width: 30%;
+        padding: 5px 10px;
         font-size: 18px;
         font-weight: 400;
         position: relative;
         bottom: 20px;
-        width: 130px;
         height: 40px;
 
         margin-left: auto;
@@ -228,6 +330,10 @@
         position: relative;
 
         padding-top: 117px;
+
+        @media (max-width: $sm) {
+            padding-top: 20px;
+        }
     }
 
     &__header-title-bg {
@@ -238,6 +344,10 @@
         font-size: 177px;
         font-weight: 500;
         color: rgba(#b8c8dc, 0.2);
+
+        @media (max-width: $sm) {
+            font-size: 70px;
+        }
     }
 
     &__title {
@@ -255,6 +365,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 10px;
 
         font-size: 16px;
         font-weight: 300;
@@ -282,6 +393,7 @@
 
     &__row-value {
         width: 30%;
+        min-width: 120px;
         color: #acacac;
 
         b {
