--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -20,6 +20,48 @@
         @media (max-width: $lg) {
             display: none;
         }
+
+        &.active {
+            position: absolute;
+            inset: 0;
+            z-index: 3;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 30px;
+
+            width: 100%;
+            height: 100vh;
+            margin: 0;
+            overflow: scroll;
+
+            padding: 30px 0;
+
+            background-color: rgba(#1d1d1d, 0.9);
+
+            .header__left,
+            .header__right {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 30px;
+            }
+
+            .nav__list {
+                flex-direction: column;
+                align-items: center;
+                gap: 30px;
+            }
+
+            .nav__link {
+                font-size: 25px;
+            }
+
+            .header__btn {
+                margin: 0;
+            }
+        }
     }
 
     &__left .nav__list {
