--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -82,6 +82,12 @@
             grid-template-columns: repeat(2, 1fr);
             grid-auto-rows: auto;
             gap: 50px 29px;
+
+            @media (max-width: $lg) {
+                grid-template-columns: 1fr;
+                gap: 30px;
+                place-items: center;
+            }
         }
     }
 
@@ -165,6 +171,18 @@
 
         .section__title {
             padding-bottom: 46px;
+        }
+
+        .section__header-title-bg {
+            @media (max-width: $lg) {
+                font-size: 100px;
+                top: -60px;
+            }
+
+            @media (max-width: $md) {
+                font-size: 80px;
+                top: -80px;
+            }
         }
 
         .section__content {
