--- a/src/scss/components/swiper.scss
+++ b/src/scss/components/swiper.scss
@@ -7,6 +7,18 @@
 
     &--about-st {
         margin: 0 30px;
+
+        @media (max-width: 1600px) {
+            margin: 0 75px;
+        }
+        @media (max-width: $md) {
+            margin: 0;
+        }
+
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+        }
     }
 }
 
@@ -49,6 +61,10 @@
 
         background-color: $colors-orange;
         border-radius: 50%;
+
+        @media (max-width: 1600px) {
+            left: 0;
+        }
     }
 }
 
@@ -67,6 +83,10 @@
 
         background-color: $colors-orange;
         border-radius: 50%;
+
+        @media (max-width: 1600px) {
+            right: 0;
+        }
     }
 
     img {
