--- a/src/scss/components/showcase.scss
+++ b/src/scss/components/showcase.scss
@@ -115,6 +115,10 @@
         line-height: 1.18;
         text-transform: uppercase;
         text-align: center;
+
+        @media (max-width: $sm) {
+            font-size: 22px;
+        }
     }
 }
 
