fix: slider images width

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -213,6 +213,7 @@
         }
 
         .section__header {
+            padding: 0 15px;
             .section__text {
                 max-width: 699px;
             }
