--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -1,10 +1,20 @@
 .nav {
+    height: 100%;
     &__list {
         display: flex;
-        gap: 43px;
+        gap: 23px;
     }
 
     &__link {
+        display: block;
         font-size: 18px;
+
+        padding: 20px 10px;
+
+        transition: 0.3s linear;
+
+        &:hover {
+            background-color: rgba(#fff, 0.2);
+        }
     }
 }
