feat: add btn hover

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -40,7 +40,7 @@
             <div class="footer__right">
                 <a href="privacy-policy.pdf">Политика конфиденциальности</a>
 
-                <button type="button" class="footer__scroll-up">
+                <button type="button" class="btn btn--orange footer__scroll-up">
                     <img src="img/icons/chevron-back.svg" alt="">
                     <span>Наверх</span>
                 </button>
