--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -53,7 +53,7 @@
     }
 
     &__scroll-up {
-        padding: 10px;
+        padding: 10px !important;
         margin-left: 78px;
 
         display: flex;
@@ -62,7 +62,6 @@
         align-items: center;
 
         color: $colors-primary;
-        background-color: #e37a3e;
 
         border: 0;
         cursor: pointer;
