--- a/src/scss/components/swiper.scss
+++ b/src/scss/components/swiper.scss
@@ -45,6 +45,12 @@
 
     cursor: pointer;
 
+    transition: 0.3s linear;
+
+    &:hover {
+        background-color: rgba(#171717, 0.7);
+    }
+
     &::after {
         display: none;
     }
