--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -368,7 +368,7 @@
     &--contacts {
         .section__inner {
             max-width: 1320px;
-            padding: 110px 0 92px;
+            padding: 55px 0;
             margin: 0 auto;
 
             display: grid;
